# backend/openapi/openapi.yaml
@@ -1,66 +1,66 @@
 openapi: 3.1.1
 
 info:
-    title: IoT Project API
-    description: IoT演習で使用するAPIの仕様書
-    version: 1.0.0
+  title: IoT Project API
+  description: IoT演習で使用するAPIの仕様書
+  version: 1.0.0
 servers:
-    - url: http://localhost:8000
-      description: 開発環境
+  - url: http://localhost:8000
+    description: 開発環境
 paths:
-    /env-logs:
-        get:
-            summary: 環境データログの取得
-            operationId: getEnvLogs
-            parameters:
-                - name: limit
-                  in: query
-                  required: false
-                  description: 取得するログの件数
-                  schema:
+  /env-logs:
+    get:
+      summary: 環境データログの取得
+      operationId: getEnvLogs
+      parameters:
+        - name: limit
+          in: query
+          required: false
+          description: 取得するログの件数
+          schema:
+            type: integer
+            format: int32
+      responses:
+        '200':
+          description: 環境データログ
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
                       type: integer
-                      format: int32
-            responses:
-                '200':
-                    description: 環境データログ
-                    content:
-                        application/json:
-                            schema:
-                                type: array
-                                items:
-                                    type: object
-                                    properties:
-                                        id:
-                                            type: integer
-                                            example: 1
-                                        device:
-                                            type: object
-                                            example: '{}'
-                                        temperatureSht:
-                                            type: number
-                                            format: float
-                                            example: 23.5
-                                        humidity:
-                                            type: number
-                                            format: float
-                                            example: 45.0
-                                        temperatureQmp:
-                                            type: number
-                                            format: float
-                                            example: 1013.25
-                                        pressure:
-                                            type: number
-                                            format: float
-                                            example: 1013.25
-                                        createdAt:
-                                            type: string
-                                            format: date-time
-                                            example: '2023-10-01T12:00:00Z'
-                                        updatedAt:
-                                            type: string
-                                            format: date-time
-                                            example: '2023-10-01T12:00:00Z'
-                '400':
-                    $ref: './components/responses/errors.yml#/responses/BadRequest'
-                '500':
-                    $ref: './components/responses/errors.yml#/responses/Internal'
+                      example: 1
+                    device:
+                      type: object
+                      example: '{}'
+                    temperatureSht:
+                      type: number
+                      format: float
+                      example: 23.5
+                    humidity:
+                      type: number
+                      format: float
+                      example: 45.0
+                    temperatureQmp:
+                      type: number
+                      format: float
+                      example: 1013.25
+                    pressure:
+                      type: number
+                      format: float
+                      example: 1013.25
+                    createdAt:
+                      type: string
+                      format: date-time
+                      example: '2023-10-01T12:00:00Z'
+                    updatedAt:
+                      type: string
+                      format: date-time
+                      example: '2023-10-01T12:00:00Z'
+        '400':
+          $ref: './components/responses/errors.yml#/responses/BadRequest'
+        '500':
+          $ref: './components/responses/errors.yml#/responses/Internal'
